Se añadió el endpoint para cambiar el estado de un deportista y se añadió la documentación que faltaba en el swagger.yaml.
